sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:95: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (x >= 0) return mod(x, n);
  ^